apps/media/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  selector:
    app: tdarr
  ports:
    - port: 8265
      targetPort: 8265
    - port: 8266
      targetPort: 8266
