apps/media/tdarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    name: tdarr
spec:
  tls:
    - hosts:
        - tdarr.internal.vkolobara.com
      secretName: tdarr-cert
  rules:
    - host: tdarr.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
